sample/misc/error/gen_alloc-tmp-array.bfr
codegen [
  $alloc {
    a: array(3) { x }
  } in
  + a:x
]